--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -18,7 +18,7 @@
                   </div>
                   <br>
                   <br>
-                  <p class="but text-center"><a href="#" class="header-but">EXPERIENCE THE FATHER'S LOVE</a></p>
+                  <p class="but text-center"><a href="https://www.youtube.com/channel/UCxISNmDZQ2LeCz-ZjkAP_2A" class="header-but" target="_blank">EXPERIENCE THE FATHER'S LOVE</a></p>
               </div>
 
               
@@ -47,8 +47,8 @@
             <div class="col-md-6">
 
                <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-6">
+                <div class="row justify-content-center">
+                    <div class="col-md-6 col-sm-4">
                         <div class="card" id="card1" style="width: 15rem; height: 15rem;">
                             <div class="layer">
                             </div>
@@ -60,7 +60,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-4">
                         <div class="card" id="card2" style="width: 15rem; height: 15rem;">
                             <div class="layer">
                             </div>
@@ -73,7 +73,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row justify-content-center">
                     <div class="col-md-6">
                         <div class="card" id="card3" style="width: 15rem; height: 15rem;">
                             <div class="layer">
@@ -102,7 +102,8 @@
                </div>
 
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6" style="margin-top: 5em;">
+              
                 <h3 class="text-underline text-left">A VISION, A MISSION, A MINISTRY</h3>
                 <p>Lapis Lazuli ministry is a vessel that seeks to carry these foundational truths 
                   out into the four corners of the world. It restores lives by reconnecting hearts
@@ -110,7 +111,7 @@
                   faulty foundations, uniting churches and ministeries, by breaking down walls to
                   celebrating all that unite, and in this way,
                   impact the spiritual state of Nations.</p>
-                  <p class="but mt-2"><a href="" class="">MORE ABOUT OUR MISSION</a></p>
+                  <p class="but"><a href="/#/about" class="">More about our mission</a></p>
             </div>
 
           </div>
@@ -144,7 +145,7 @@
                 <img src="" alt="">
                 
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 embed-responsive embed-responsive-16by9">
                 <iframe frameborder="0" width="280" height="216" src="https://llmradio.com/embed/player?stream=auto&amp;title=Now Playing"></iframe>
             </div>
     </div>
@@ -161,10 +162,10 @@
                           looking to expand their ministry training. CHCP embraces a holistic
                           approach, providing a hands-on experience for anyone with an interest
                           in Physical Healing, Inner Healing or Deliverance.</p>
-                          <p class="but mt-2"><a href="">Learn more</a></p>
+                          <p class="but"><a href="">Learn more</a></p>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 embed-responsive embed-responsive-16by9">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/lMBALbd6ADU?start=9" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
