--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -46,7 +46,21 @@
           <div class="row">
             <div class="col-md-6">
 
-               <div class="container-fluid">
+              <h3 class="text-underline text-left">A VISION, A MISSION, A MINISTRY</h3>
+              <br>
+              <p>Lapis Lazuli ministry is a vessel that seeks to carry these foundational truths 
+                out into the four corners of the world. It restores lives by reconnecting hearts
+                back to the extravagant love of The Father,raising up generations by repairing 
+                faulty foundations, uniting churches and ministeries, by breaking down walls to
+                celebrating all that unite, and in this way,
+                impact the spiritual state of Nations.</p>
+                <p class="but"><a href="/#/about" class="">More about our mission</a></p>
+
+              
+
+            </div>
+            <div class="col-md-6" style="">
+              <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-sm-4">
                         <div class="card" id="card1" style="width: 15rem; height: 15rem;">
@@ -100,18 +114,7 @@
                     </div>
                 </div>
                </div>
-
-            </div>
-            <div class="col-md-6" style="margin-top: 5em;">
-              
-                <h3 class="text-underline text-left">A VISION, A MISSION, A MINISTRY</h3>
-                <p>Lapis Lazuli ministry is a vessel that seeks to carry these foundational truths 
-                  out into the four corners of the world. It restores lives by reconnecting hearts
-                  back to the extravagant love of The Father,raising up generations by repairing 
-                  faulty foundations, uniting churches and ministeries, by breaking down walls to
-                  celebrating all that unite, and in this way,
-                  impact the spiritual state of Nations.</p>
-                  <p class="but"><a href="/#/about" class="">More about our mission</a></p>
+               
             </div>
 
           </div>
