--- a/src/app/admin/admin/message/message/message.component.html
+++ b/src/app/admin/admin/message/message/message.component.html
@@ -1,1 +1,7 @@
-<p>message works!</p>
+<div class="wrapper">
+    <div class="page-header page-header-xs" data-parallax="true" style="background-image: url('./assets/img/fabio-mangione.jpg');">
+        <div class="filter"></div>
+    </div>
+</div>
+<br>
+<subnav></subnav>
