--- a/src/app/layouts/admin/admin.component.html
+++ b/src/app/layouts/admin/admin.component.html
@@ -3,7 +3,7 @@
 <!-- ============================================================= -->
 <div id="main-wrapper">
     <div class="page-wrapper">
-        <div class="container-fluid">
+        <!-- <div class="container-fluid"> -->
             <!-- ============================================================== -->
             <!-- Start Page Content -->
             <!-- ============================================================== -->
@@ -11,18 +11,11 @@
             <!-- ============================================================== -->
             <!-- End Start Page Content -->
             <!-- ============================================================== -->
-        </div>
+        <!-- </div> -->
         <!-- ============================================================== -->
         <!-- End Container fluid  -->
         <!-- ============================================================== -->
         <!-- ============================================================== -->
-        <!-- footer -->
-        <!-- ============================================================== -->
-        <footer class="footer text-center">
-            All Rights Reserved by Lapis Lasuli.  
-        </footer>
-        <!-- ============================================================== -->
-        <!-- End footer -->
         <!-- ============================================================== -->
     </div>
     <!-- ============================================================== -->
