--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -14,7 +14,6 @@
                                           <i class="nc-icon nc-email-85"></i>
                                       </span>
                                     </div>
-    
                                       <input type="text" class="form-control" placeholder="Email" formControlName="email" (focus)="focus=true" (blur)="focus=false" >
                                   </div>
                                   <label>Password</label>
@@ -24,10 +23,10 @@
                                           <i class="nc-icon nc-key-25"></i>
                                       </span>
                                     </div>
-                                      <input type="text" class="form-control" formControlName="password" placeholder="Password" (focus)="focus1=true" (blur)="focus1=false" >
+                                      <input type="password" class="form-control" formControlName="password" placeholder="Password" (focus)="focus1=true" (blur)="focus1=false" >
                                   </div>
                                   <button class="btn btn-danger btn-block btn-round" type="submit">Login</button>
-                                 <button  size="xsmall"   (click)="showSpinner()">Show</button>
+                                 <!-- <button  size="xsmall"   (click)="showSpinner()">Show</button> -->
                                 
                                   
                                 </form>
