--- a/src/app/admin/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/admin/dashboard/dashboard.component.html
@@ -112,7 +112,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <!-- <a routerLink="/admin/resources" style="cursor: poiner;"> -->
+                                    <a routerLink="/admin/resources" style="cursor: poiner;">
                                     <div class="card" id="card3" style="width: 15rem; height: 15rem;">
                                         <div class="layer">
                                         </div>
@@ -123,19 +123,21 @@
                                       <p class="card-text-hide">Resources Management Module.</p>
                                     </div>
                                      </div>
-                                  <!-- </a> -->
+                                  </a>
                                 </div>
                                 <div class="col-md-6">
+                                  <a routerLink="/admin/teaching" style="cursor: poiner;">
                                     <div class="card" id="card4" style="width: 15rem; height: 15rem;">
                                         <div class="layer">
                                         </div>
                                     <div class="card-body">
                                         <i class="fa fa-book"></i>
-                                      <h5 class="card-titles">SHARING JESUS</h5>
+                                      <h5 class="card-titles">Teachings </h5>
                                      
-                                      <p class="card-text-hide">Responding to God’s extravagant Love by loving God with all my heart, soul, strength and mind.</p>
+                                      <p class="card-text-hide">Teaching Modules</p>
                                     </div>
                                   </div>
+                                </a>
                                 </div>
                             </div>
                            </div>
