--- a/src/app/admin/admin/event/event-list/event-list.component.html
+++ b/src/app/admin/admin/event/event-list/event-list.component.html
@@ -2,8 +2,15 @@
     <div class="page-header page-header-xs" data-parallax="true" style="background-image: url('./assets/img/fabio-mangione.jpg');">
         <div class="filter"></div>
     </div>
+</div>
+<br>
+<subnav></subnav>
+<!-- <div class="wrapper">
+    <div class="page-header page-header-xs" data-parallax="true" style="background-image: url('./assets/img/fabio-mangione.jpg');">
+        <div class="filter"></div>
+    </div> -->
     <div class="container">
-        <button class="btn btn-outline-danger btn-round float-right" (click)="open()">Launch demo modal</button>
+        <button class="btn btn-outline-danger btn-round float-right" (click)="open()">Create Event</button>
        <div class="row">
           <div class="col-md-6">
             <div class="container-fluid">
@@ -29,7 +36,5 @@
         </div>
        </div>
     </div>
-
-
-</div>
+<!-- </div> -->
 
