--- a/src/app/admin/admin/resources/resource/resource.component.html
+++ b/src/app/admin/admin/resources/resource/resource.component.html
@@ -1,1 +1,29 @@
-<p>resource works!</p>
+<div class="wrapper">
+    <div class="page-header page-header-xs" data-parallax="true" style="background-image: url('./assets/img/fabio-mangione.jpg');">
+        <div class="filter"></div>
+    </div>
+</div>
+<br>
+<subnav></subnav>
+<button class="btn btn-outline-danger btn-round float-right" (click)="open()">Upload Resources</button>
+<main role="main" class="container">
+  <br>
+    <div class="my-3 p-3 bg-white rounded shadow-sm">
+      <h6 class="border-bottom border-gray pb-2 mb-0">Resources List</h6>
+      <div class="media text-muted pt-3" *ngFor="let item of results">
+        <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32">
+            <title>Placeholder</title>
+            <rect width="100%" height="100%" fill="#e83e8c"/>
+            <text x="50%" y="50%" fill="#e83e8c" dy=".3em">32x32</text>
+        </svg>
+        <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+          <strong class="d-block text-gray-dark">{{item?.title}}</strong>
+            <a href="{{item?.link}}" target="_blank">{{item?.link}}</a>
+        </p>       
+        <span class="d-block view" (click)="viewResource(item)">view</span>
+      </div>
+      <small class="d-block text-right mt-3">
+        <a href="#">All updates</a>
+      </small>
+    </div>
+</main>
