--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -9,78 +9,54 @@
                     <img src="{{userInfo?.photo}}" alt="Circle Image" class="img-circle img-no-padding img-responsive">
                 </div>
                 <div class="name">
-                    <h4 class="title">{{userInfo?.name}}<br /></h4>
+                    <h4 class="title">{{userInfo?.name}}</h4>
                     <h6 class="description">{{userInfo?.username}}</h6>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 ml-auto mr-auto text-center">
-                    <p>An artist of considerable range, Jane Faker — the name taken by Melbourne-raised, Brooklyn-based Nick Murphy — writes, performs and records all of his own music, giving it a warm, intimate feel with a solid groove structure. </p>
-                    <br />
-                    <button class="btn btn-outline-default btn-round"><i class="fa fa-cog"></i> Settings</button>
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                  <div class="flex-container">
+                    <div class="help-box">
+                        <a routerLink="">
+                            <p>Submit Testimony</p>
+                        </a>
+                    </div>
+                    <div class="help-box">
+                        <a >
+                            <p>Submit Prayer Point</p>
+                        </a>
+                    </div>
+                    <div class="help-box">
+                        <a >
+                            <p></p>
+                        </a>
+                    </div>
+                  </div>
+                  <div class="flex-container">
+                    <!-- <div class="help-box">
+                        <a  routerLink="/customer/settings">
+                            <p>Change Password</p>
+                        </a>
+                    </div>
+                    <div class="help-box">
+                        <a routerLink="/customer/update-detail"> 
+                            <p>Edit Account Details</p>
+                        </a>
+                    </div> -->
+                    <div class="help-box">
+                        <a routerLink="">
+                            <p>Logout</p>
+                            <p style="font-size: 14px !important; font-weight: 100; color: darkgray;">    
+                            </p>
+                        </a>
+                    </div>
+                
+                  </div>
                 </div>
+                <div class="col-md-2"></div>
             </div>
             <br/>
-            <div class="nav-tabs-navigation">
-                <div class="nav-tabs-wrapper">
-                    <ngb-tabset [justify]="'center'">
-                        <ngb-tab title="Follows">
-                            <ng-template ngbTabContent >
-                                <div class="row following" id="follows">
-                                    <div class="col-md-6 ml-auto mr-auto">
-                                        <ul class="list-unstyled follows">
-                                            <li>
-                                                <div class="row">
-                                                    <div class="col-md-2 col-sm-2 ml-auto mr-auto">
-                                                        <img src="./assets/img/faces/clem-onojeghuo-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                                                    </div>
-                                                    <div class="col-md-7 col-sm-4 ml-auto">
-                                                        <h6>Flume<br/><small>Musical Producer</small></h6>
-                                                    </div>
-                                                    <div class="col-md-3 col-sm-2 ml-auto mr-auto">
-                                                        <div class="form-check">
-                                                          <label class="form-check-label">
-                                                            <input class="form-check-input" type="checkbox" value="" checked="">
-                                                            <span class="form-check-sign"></span>
-                                                          </label>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                            <hr />
-                                            <li>
-                                                <div class="row">
-                                                    <div class="col-md-2 col-sm-2 ml-auto mr-auto">
-                                                        <img src="./assets/img/faces/ayo-ogunseinde-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                                                    </div>
-                                                    <div class="col-md-7 col-sm-4 ml-auto">
-                                                        <h6>Banks<br /><small>Singer</small></h6>
-                                                    </div>
-                                                    <div class="col-md-3 col-sm-2 ml-auto mr-auto">
-                                                        <div class="form-check">
-                                                          <label class="form-check-label">
-                                                            <input class="form-check-input" type="checkbox" value="" checked="">
-                                                            <span class="form-check-sign"></span>
-                                                          </label>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </ng-template>
-                        </ngb-tab>
-                        <ngb-tab title="Following">
-                            <ng-template ngbTabContent>
-                                <h3 class="text-muted">Not following anyone yet :(</h3>
-                                <br>
-                                <button class="btn btn-warning btn-round">Find artists</button>
-                            </ng-template>
-                        </ngb-tab>
-                    </ngb-tabset>
-                </div>
-            </div>
         </div>
     </div>
 </div>
