--- a/src/app/pages/founders/founders.component.html
+++ b/src/app/pages/founders/founders.component.html
@@ -1,4 +1,38 @@
-<div class="container-fluid">
-    <p>founders works!</p>
-
+<div class="container-fluid" id="founders">
+  
+</div>
+<div class="container-fluid" id="bl">
+    <div class="container">
+    <div class="row d-flex justify-content-center">
+        <div class="col-md-3">
+            <img src="assets/img/f.jpg" class="img-thumbnai" height="100px" alt=""> 
+        </div>
+        <div class="col-md-9 pt-3">
+            <br>
+            <h5>Grow and be Inspired- In His Presence <span style="color:;"><a href="https://www.youtube.com/channel/UCxISNmDZQ2LeCz-ZjkAP_2A">Watch Now</a></span></h5>
+        </div>
+    </div>
+    </div>
+</div>
+<div class="container-fluid" style="background-color: #EAEAEA;">
+    <div class="container mt-2" class="text-center">
+      <div class="row">
+          <div class="col-md-3"></div>
+          <div class="col-md-6">
+            <h1>Femi and Mina Bajomo</h1>
+            <h3>Founders, Lapis Lazuli Ministries</h3>
+            <br>
+            <p class="">This ministry was founded by Femi and Mina Bajomo. They are both on the leadership at The Holy Trinity Church, Swiss Cottage, London, where Femi serves as the Church warden and Mina is voluntarily on staff as Kingdom Pastor. They are both also actively involved with the Nigerian Chaplaincy in London. When they are in Nigeria, they worship at Our Saviours Church, Lagos, where Femi helps on the Evangelical committee. Femi works as an Oil Executive, and is committed to the expansion of Gods Kingdom here on Earth. He serves on Prayer and Healing teams and encourages others to step into the fullness of what Jesus accomplished for them.</p>
+            <p>Mina Bajomo believes that the goodness of God leads people to repentance. She is devoted to helping people experience His goodness through worship, surrender, and responding to Papa’s extravagant love. She encourages people to be emboldened by the Holy Spirit and walk in all that Jesus accomplished on the cross. She is powerfully used by God in prophetic intercession, spiritual warfare, inner healing and physical healing. She is given to the pursuit of the study of the Word and intimacy with Papa.    </p>
+            <p>She has a PhD in Biochemistry, and has lectured in universites in Nigeria and Namibia. Femi and Mina have been married for over 30years . They have four amazing children; OreOluwa, Olatundun, Olufolarin, Olabisi and two grandchildren. They all love the Lord and serve in the ministry in various capacities.
+          </p>
+          <br>
+          <i class="fa fa-facebook" aria-hidden="true"></i>
+          <i class="fa fa-twitter" aria-hidden="true"></i>
+          <i class="fa fa-instagram" aria-hidden="true"></i>
+          <i class="fa fa-youtube" aria-hidden="true"></i>
+          </div>
+          <div class="col-md-3"></div>
+      </div>
+    </div>
 </div>
