--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -28,10 +28,10 @@
 
   </div>
  
-  <div class="divs">
+  <div class="divs" style="padding: 10em 0 10em 0">
+    <h3 class="text-center mb-2">WELCOME TO LAPIS LAZULI MINISTRIES</h3>
     <div class="container">
         <div class="text-center">
-            <h3 class="mb-2">WELCOME TO LAPIS LAZULI MINISTRIES</h3>
             <br>
             <p>Lapis Lazuli Ministries exists to awaken the body of 
                 Christ to the extravagant love of God the Father. Lapis Lazuli Ministries aims to achieve our mission by coming
@@ -40,6 +40,26 @@
                 life of Jesus Christ as modelled by Him.</p>
         </div>
     </div>
+</div>
+
+<div class="divs" style="background-color: #222222; padding: 10em 0 10em 0">
+  <div class="container text-center">
+    <h3 class="mb-2" style="color: #fff">TEACHINGS</h3>
+    <div class="row">
+      <div class="col-md-4 embed-responsive embed-responsive-16by9">
+       <div> <iframe width="560" height="315" src="https://www.youtube.com/embed/GDrtT_HZ6YE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+      </div>
+      <div class="col-md-4 embed-responsive embed-responsive-16by9">
+        <div><iframe width="560" height="315" src="https://www.youtube.com/embed/T8Rw-P8aA7k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+      </div>
+      <div class="col-md-4 embed-responsive embed-responsive-16by9">
+        <div>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/kbMwTOOiTp0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
+      
+    </div>
+  </div>
 </div>
   <div class="divs bg-grey">
       <div class="container">
