--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -5,3 +5,8 @@
 //     padding: 0 !important;
 //     color: #222222 !important;
 // }
+
+#donate{
+    background: #3952A4 !important;
+    border-color: #3952A4;
+}
