--- a/src/assets/sass/paper-kit/_dropdown.scss
+++ b/src/assets/sass/paper-kit/_dropdown.scss
@@ -102,7 +102,7 @@
         }
         &.dropdown-danger .dropdown-item:hover,
         &.dropdown-danger .dropdown-item:focus{
-            background-color: $bg-danger;
+            background-color: #3952A4;
         }
 
     }
