--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -29,6 +29,11 @@
                 </div>
             </li>
             <li class="nav-item" >
+                <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" routerLink="/teachings" >
+                   Teachings
+                </a>
+            </li>
+            <li class="nav-item" >
                 <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" routerLink="/events" >
                    EVENTS
                 </a>
