--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<!-- <div class="wrapper">
     <div class="page-header section-dark" style="background-image: url('assets/img/antoine-barres.jpg')">
         <div class="filter"></div>
         <div class="content-center">
@@ -21,8 +21,6 @@
         </div>
         <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
         <h6 class=" category-absolute ml-auto mr-auto">Designed and coded by
-        <!-- <h6 class="category category-absolute">Designed and coded by -->
-
             <a href="https://www.creative-tim.com" target="_blank">
                 <img src="assets/img/creative-tim-white-slim2.png" class="creative-tim-logo">
             </a>
@@ -374,4 +372,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
