--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -1,1 +1,6 @@
-<p>event works!</p>
+<div class="container-fluid" id="events">
+    <div class="layer"></div>
+    <div class="container">
+        <h2 class="text-center coming">COMING SOON</h2>
+    </div>
+</div>
