--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -28,7 +28,7 @@
 
   </div>
  
-  <div class="divs" style="padding: 10em 0 10em 0">
+  <div class="divs" style="padding: 5em 0 10em 0">
     <h3 class="text-center mb-2">WELCOME TO LAPIS LAZULI MINISTRIES</h3>
     <div class="container">
         <div class="text-center">
@@ -42,7 +42,7 @@
     </div>
 </div>
 
-<div class="divs" style="background-color: #222222; padding: 10em 0 10em 0">
+<div class="divs" style="background-color: #222222; padding: 5em 0 10em 0">
   <div class="container text-center">
     <h3 class="mb-2" style="color: #fff">TEACHINGS</h3>
     <div class="row">
@@ -64,82 +64,85 @@
   <div class="divs bg-grey">
       <div class="container">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-12">
 
               <h3 class="text-underline text-left">A VISION, A MISSION, A MINISTRY</h3>
               <br>
-              <p>Lapis Lazuli ministry is a vessel that seeks to carry these foundational truths 
+              <p>
+                Lapis Lazuli Ministries is about restoring the hearts back to the extravagant love of the Father. It's about raising up transfromed generations by repairing faulty foundation, it seeks to unite churches and ministeries by breaking down walls; and it celebrates all that unites thus impacting us.
+                Lapis Lazuli Ministries is a vessel that seeks to carry foundational truth out to the four corners of the world.
+              </p>
+              <!-- <p>Lapis Lazuli ministry is a vessel that seeks to carry these foundational truths 
                 out into the four corners of the world. It restores lives by reconnecting hearts
                 back to the extravagant love of The Father,raising up generations by repairing 
                 faulty foundations, uniting churches and ministeries, by breaking down walls to
                 celebrating all that unite, and in this way,
-                impact the spiritual state of Nations.</p>
+                impact the spiritual state of Nations.</p> -->
                 <p class="but"><a href="/#/about" class="">More about our mission</a></p>
 
               
 
             </div>
-            <div class="col-md-6" style="">
-              <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-md-6 col-sm-4">
-                        <div class="card" id="card1" style="width: 15rem; height: 15rem;">
-                            <div class="layer">
-                            </div>
-                        <div class="card-body">
-                            <i class="fa fa-heart"></i>
-                          <h5 class="card-titles">RESPOND TO GOD'S LOVE</h5>
-                         
-                          <p class="card-text-hide">Responding to God’s extravagant Love by loving God with all my heart, soul, strength and mind.</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-md-6 col-sm-4">
-                        <div class="card" id="card2" style="width: 15rem; height: 15rem;">
-                            <div class="layer">
-                            </div>
-                        <div class="card-body">
-                            <i class="fa fa-book"></i>
-                          <h5 class="card-titles">EMPOWERED BY THE HOLY SPIRIT</h5>
-                         
-                          <p class="card-text-hide">Responding to God’s extravagant Love by loving God with all my heart, soul, strength and mind.</p>
-                        </div>
-                      </div>
-                    </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-md-6">
-                        <div class="card" id="card3" style="width: 15rem; height: 15rem;">
-                            <div class="layer">
-                            </div>
-                        <div class="card-body">
-                            <i class="fa fa-heart"></i>
-                          <h5 class="card-titles">PREPARING THE BRIDE</h5>
-                         
-                          <p class="card-text-hide">Responding to God’s extravagant Love by loving God with all my heart, soul, strength and mind.</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="card" id="card4" style="width: 15rem; height: 15rem;">
-                            <div class="layer">
-                            </div>
-                        <div class="card-body">
-                            <i class="fa fa-book"></i>
-                          <h5 class="card-titles">SHARING JESUS</h5>
-                         
-                          <p class="card-text-hide">Responding to God’s extravagant Love by loving God with all my heart, soul, strength and mind.</p>
-                        </div>
-                      </div>
-                    </div>
-                </div>
-               </div>
-               
-            </div>
 
           </div>
       </div>
+  </div> <!-- end of more about us -->
+
+  <div class="divs">
+   <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <div class="card" id="card1" style="width: 15rem; height: 15rem;">
+          <div class="layer">
+          </div>
+      <div class="card-body">
+          <i class="fa fa-heart"></i>
+        <h5 class="card-titles">RESPOND TO GOD'S LOVE</h5>
+       
+        <p class="card-text-hide">Responding to God’s extravagant Love by loving God with all my heart, soul, strength and mind.</p>
+      </div>
+    </div>
+       </div>
+       <div class="col-md-3">
+        <div class="card" id="card2" style="width: 15rem; height: 15rem;">
+          <div class="layer">
+          </div>
+      <div class="card-body">
+          <i class="fa fa-book"></i>
+        <h5 class="card-titles">EMPOWERED BY THE HOLY SPIRIT</h5>
+       
+        <p class="card-text-hide">Responding to God’s extravagant Love by loving God with all my heart, soul, strength and mind.</p>
+      </div>
+    </div>
+       </div>
+       <div class="col-md-3">
+        <div class="card" id="card3" style="width: 15rem; height: 15rem;">
+          <div class="layer">
+          </div>
+      <div class="card-body">
+          <i class="fa fa-heart"></i>
+        <h5 class="card-titles">PREPARING THE BRIDE</h5>
+       
+        <p class="card-text-hide">Responding to God’s extravagant Love by loving God with all my heart, soul, strength and mind.</p>
+      </div>
+    </div>
+       </div>
+       <div class="col-md-3">
+        <div class="card" id="card4" style="width: 15rem; height: 15rem;">
+          <div class="layer">
+          </div>
+      <div class="card-body">
+          <i class="fa fa-book"></i>
+        <h5 class="card-titles">SHARING JESUS</h5>
+       
+        <p class="card-text-hide">Responding to God’s extravagant Love by loving God with all my heart, soul, strength and mind.</p>
+      </div>
+    </div>
+       </div>
+    </div>
+   </div>
   </div>
+
   <div class="divs">
       <div class="container">
           <h3 class="text-center">CONFERENCES & EVENTS</h3>
@@ -174,23 +177,35 @@
     </div>
       </div>
   </div>
-  <div class="divs">
-      <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div>
-                    <h3>Christian Healing Certification 
-                      Program (CHCP)</h3>
-                      <p>CHCP presents a practical, theologically grounded option for anyone 
-                          looking to expand their ministry training. CHCP embraces a holistic
-                          approach, providing a hands-on experience for anyone with an interest
-                          in Physical Healing, Inner Healing or Deliverance.</p>
-                          <p class="but"><a href="">Learn more</a></p>
-                </div>
-            </div>
-            <div class="col-md-6 embed-responsive embed-responsive-16by9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/lMBALbd6ADU?start=9" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
+  <div class="">
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+           <div class="col-md-3 mini" id="mini1">
+             <h3>Lapis Lazuli Ministries Radio</h3>
+             <br>
+             <br>
+             <p class="but mg"><a href="/">LISTEN NOW</a></p>
+           </div>
+           <div class="col-md-3 mini" id="mini2">
+             <div class="layer"></div>
+             
+              <h3>Lapis Lazuli Healing and Prophetic Ministries</h3>
+
+              <p class="but mg"><a href="/">LEARN MORE</a></p>
+             
+           </div>
+           <div class="col-md-3 mini" id="mini3">
+             <h3>Lapis Lazuli  Ministries Resources</h3>
+             <br>
+             <br>
+             <p class="but mg"><a href="/">EXPLORE MORE</a></p>
+           </div>
+           <div class="col-md-3 mini" id="mini4">
+             <h3>Conferences and Events</h3>
+             <br>
+             <br>
+             <p class="but mg"><a href="/">LEARN MORE</a></p>
+           </div>
         </div>
       </div>
   </div>
