--- a/src/app/pages/landing/landing.component.scss
+++ b/src/app/pages/landing/landing.component.scss
@@ -47,7 +47,9 @@
     width: 100%;
     height: 100%;
     border-radius: 12px;
+    z-index: 1;
 }
+
 
 .card-body{
     position: relative;
@@ -72,9 +74,51 @@
     font-size: 14px;
 }
 
-div{
+.mini{
+    height: 350px;
+    background-position: center;
+    background-size: cover;
+    position: relative;  
+    transition: all 1s;
+    color: #ffffff;
     padding-top: 20px;
-    padding-bottom: 20px;
+}
+
+// .mini:hover{
+//     transform: scale(1.2);
+// }
+
+#mini1{
+    background-image: url(assets/img/radio.jpg);
+}
+
+#mini2{
+    background-image: url(assets/img/christ.jpg);
+    
+}
+
+#mini2 > h3{
+    position: relative;
+    z-index: 5;
+}
+#mini3{
+    background-image: url(assets/img/books.jpg);
+}
+
+
+#mini4{
+    background-image: url(assets/img/events.jpg);
+}
+
+.mg{
+    position: absolute;
+    top: 5em;
+    z-index: 5;
+}
+
+.divs{
+    padding-top: 5em;
+    padding-bottom: 5em;
 }
 .bg-grey{
     background-color: #F3F5F7;
@@ -95,7 +139,7 @@ h4{
 
 .but> a{
     box-shadow: 0px 3px 6px #00000029;
-    padding: 20px 10px 20px 10px;
+    padding: 15px 10px 15px 10px;
     color: #222 !important;
     background-color: #ffffff;
     margin-top: 12px; 
@@ -103,7 +147,7 @@ h4{
 
 #app{
     position: relative;
-    top: 90px;
+    // top: 90px;
 }
 
 // section{
